k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  ports:
    - port: 9000
  selector:
    app: authservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: authservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  ports:
    - port: 8080
  selector:
    app: bff
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - name: bff
          image: bff:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chatapi
spec:
  ports:
    - port: 8081
  selector:
    app: chatapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapi
spec:
  selector:
    matchLabels:
      app: chatapi
  template:
    metadata:
      labels:
        app: chatapi
    spec:
      containers:
        - name: chatapi
          image: chatapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: chatservice
spec:
  ports:
    - port: 8083
  selector:
    app: chatservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatservice
spec:
  selector:
    matchLabels:
      app: chatservice
  template:
    metadata:
      labels:
        app: chatservice
    spec:
      containers:
        - name: chatservice
          image: chatservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  ports:
    - port: 8082
  selector:
    app: userservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: userservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: botservice
spec:
  ports:
    - port: 8086
  selector:
    app: botservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botservice
spec:
  selector:
    matchLabels:
      app: botservice
  template:
    metadata:
      labels:
        app: botservice
    spec:
      containers:
        - name: botservice
          image: botservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
