k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bff.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 8080
    - host: auth.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 9000
